RESOLVED FIXED15767
Text decorations do not respect "visibility" property
https://bugs.webkit.org/show_bug.cgi?id=15767
Summary Text decorations do not respect "visibility" property
Andreas Neumann
Reported 2007-10-30 13:31:15 PDT
In the example map of Austria, if one toggles the visibility of the layer "Cities" the underline of the text "Wien", set with text-decoration:underline remains visible while the rest of the text disappears. For correct behavior, the visibility of the underline text-decoration should follow the rest of the text. The layer toggling is achieved by setting the "visibility" attribute. Thank you for having a look at this issue.
Attachments
test case (245 bytes, image/svg+xml)
2007-11-05 09:52 PST, Eric Seidel (no email)
no flags
First attempt (14.86 KB, patch)
2007-12-03 12:23 PST, Rob Buis
darin: review+
Eric Seidel (no email)
Comment 1 2007-11-05 09:52:03 PST
Ok, I have a reduction.
Eric Seidel (no email)
Comment 2 2007-11-05 09:52:43 PST
Created attachment 17045 [details] test case Thanks for the bug!
Eric Seidel (no email)
Comment 3 2007-11-05 10:00:55 PST
This is only a nightly problem as Safari 3 did not have text-decoration support for SVG text.
Rob Buis
Comment 4 2007-12-03 12:23:04 PST
Created attachment 17683 [details] First attempt This should fix it :) Testcase is basically the reduced testcase. Cheers, Rob.
Nikolas Zimmermann
Comment 5 2007-12-03 12:46:19 PST
(In reply to comment #4) > Created an attachment (id=17683) [edit] > First attempt > > This should fix it :) Testcase is basically the reduced testcase. > Cheers, > > Rob. > Hey Rob, nice to see you back hacking :-) the patch itself is correct - though there's a faster way to do that. Remove the check again, and also remove it from SVGInlineTextBox::paintCharacters. In SVGRootInlineBox:525 (SVGRootInlineBoxWalker, chunkPortionCallback function) it should be checked once wheter visiblity is visible or hidden - and not call the several paintDecoration functions at all. I forgot about this bug :-) Greetings, Niko
Darin Adler
Comment 6 2007-12-03 13:19:35 PST
Comment on attachment 17683 [details] First attempt Looks fine, r=me. Extra space before the ")" character.
Rob Buis
Comment 7 2007-12-03 13:28:26 PST
Landed in r28363.
Note You need to log in before you can comment on or make changes to this bug.