        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15767
        Text decorations do not respect "visibility" property

        Only paint decorations if visibility is "visible".



Canonical link: https://commits.webkit.org/22261@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28363 268f45cc-cd09-0410-ab3c-d52691b4dbfc